--- a/social_media/public/css/styles.css
+++ b/social_media/public/css/styles.css
@@ -6,7 +6,7 @@ body {
     min-height: 100vh;
     padding-bottom: 100px;
     position: relative;
-    background: rgb(233, 236, 245);
+    background-color: #cfd8fa !important;
 }
 
 header {
@@ -29,4 +29,126 @@ header {
 
 #navbar img {
     width: 100px;
+}
+
+/* welcome */
+
+#main-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    background-color: #cfd8fa !important;
+}
+
+#main-container #btn-create-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background-color: #ffffff;
+    height: 50px;
+    width: 500px;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+    border-radius: 6px;
+}
+
+#main-container #btn-create-container #card-create-post {
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    width: 100px;
+    height: 42px;
+    background-color: #c6c6cc;
+    color: #1d1c1f;
+    border-radius: 6px;
+}
+
+#card-create-post button {
+    background-color: #c6c6cc;
+    border: none;
+}
+
+#card-create-post img {
+    width: 15px;
+}
+
+#card-create-post a {
+    text-decoration: none;
+    color: #1d1c1f;
+}
+
+#main-container #feed-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
+    width: 500px;
+    border-radius: 6px;
+}
+
+#card-post {
+    width: 500px;
+    background-color: #ffffff;
+    margin-bottom: 1rem;
+}
+
+#avatar-container {
+    display: flex;
+    align-items: center;
+    justify-content: start;
+    margin: 4px;
+}
+#avatar-container img {
+    width: 30px;
+    border-radius: 50%;
+    margin-right: 0.5rem;
+}
+
+#avatar-info {
+    display: flex;
+    flex-direction: column;
+    height: 40px;
+}
+
+#avatar-info h3 {
+    font-size: 15px;
+    font-weight: 900;
+    color: rgb(41, 50, 93);
+    margin-top: 3px;
+    margin-bottom: -1px;
+}
+
+#avatar-info span {
+    font-size: 10px;
+    font-weight: 300;
+    color: #3d3c3c !important;
+}
+
+#category-container {
+    display: flex;
+    align-items: center;
+    justify-content: start;
+    margin-left: 6px;
+}
+#category-container img {
+    width: 10px;
+    margin-right: 3px;
+}
+#category-container p {
+    font-size: 15px;
+    font-weight: 700;
+    color: rgb(41, 50, 93);
+    padding-top: 4px;
+}
+
+#publication-container {
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    margin: 1rem;
+    color: #3d3c3c;
 }
